# Dynamizer

./: .weeder.yaml  README.md  dynamizer.cabal  nAnnotizer.cabal  stack.yaml
Dynamizer/: CmdOptions.hs  CodeGen.hs  Lattice.hs  Main.hs  Module.hs  Parser.hs  Sampling.hs
Dynamizer/Lang/: L1.hs  Syntax.hs
hs/: Annotizer.hs  CodeGen.hs  Main.hs  Parser.hs  Syntax.hs  TRecon.hs
rkt/: annotizer.rkt  trecon.rkt
src/: Annotizer.hs  CmdOptions.hs  CodeGen.hs  Lattice.hs  Main.hs  Parser.hs  Sampling.hs
src/lang/: L1.hs  Syntax.hs
test/: Main.hs  Sampling.hs
test/Test/: Lattice.hs  Sampling.hs
