
name:                dynamizer
version:             0.1.0.0
Copyright:           (c) 2015 Deyaaeldeen Almahallawi
synopsis:            dynamizer produces all valid less precisely-typed versions of a valid program in Schml.
-- description:         
homepage:            https://github.com/deyaaeldeen/Dynamizer
license:             GPL-3
license-file:        LICENSE
author:              Deyaaeldeen Almahallawi
maintainer:          Deyaaeldeen Almahallawi <dalmahal@indiana.edu>
Bug-reports:         https://github.com/deyaaeldeen/Dynamizer/issues
-- copyright:           
category:            Language
Stability:           experimental   
build-type:          Simple
extra-source-files:  README.md, LICENSE
cabal-version:       >=1.22
Source-repository head
   type: git
   location: git://github.com/deyaaeldeen/Dynamizer.git

executable dynamizer
  main-is:             Main.hs
  other-modules:       Annotizer, CodeGen, L1, Parser, Syntax, Sampling
  other-extensions:    TypeSynonymInstances, FlexibleInstances, TupleSections, NoMonomorphismRestriction, FlexibleContexts, MultiParamTypeClasses, RankNTypes
  build-depends:       base >=4.9 && <4.10, containers >=0.5 && <0.6, pretty >=1.1 && <1.2, directory >=1.3.0.0, parsec >=3.1 && <3.2, mtl >=2.2 && <2.3, filepath >=1.4.0.0, random>=1.1,tf-random >= 0.5, conduit>=1.2.6.6, transformers>=0.5.2.0,intervals >=0.7.2,extra>=1.4.10,random-shuffle>=0.0.4,lattices>=1.5.0,recursion-schemes>=5
  hs-source-dirs:      src,src/lang
  default-language:    Haskell2010
  ghc-options:
    -Wall -O2 -threaded -rtsopts
