
name:                dynamizer
version:             0.1.0.0
Copyright:           (c) 2015 Deyaaeldeen Almahallawi
synopsis:            dynamizer produces all valid less precisely-typed versions of a valid program in Schml.
-- description:         
homepage:            https://github.com/deyaaeldeen/Dynamizer
license:             GPL-3
license-file:        LICENSE
author:              Deyaaeldeen Almahallawi
maintainer:          Deyaaeldeen Almahallawi <dalmahal@indiana.edu>
Bug-reports:         https://github.com/deyaaeldeen/Dynamizer/issues
-- copyright:           
category:            Language
Stability:           experimental   
build-type:          Simple
extra-source-files:  README.md, LICENSE
cabal-version:       >=1.22
Source-repository head
   type: git
   location: git://github.com/deyaaeldeen/Dynamizer.git

executable dynamizer
  main-is:             Main.hs
  other-modules:       Annotizer, CmdOptions, CodeGen, L1, Parser, Syntax, Sampling
  other-extensions:    TypeSynonymInstances, FlexibleInstances, TupleSections, NoMonomorphismRestriction, FlexibleContexts, MultiParamTypeClasses, RankNTypes
  build-depends:       base
                     , containers
                     , pretty
                     , directory
                     , parsec
                     , mtl
                     , filepath
                     , random
                     , tf-random
                     , transformers
                     , intervals
                     , extra
                     , random-shuffle
                     , lattices
                     , bifunctors
                     , recursion-schemes
                     , optparse-applicative
  hs-source-dirs:      src,src/lang
  default-language:    Haskell2010
  ghc-options:
    -Wall -O2 -threaded -rtsopts
