name:                dynamizer
version:             0.1.0.0
Copyright:           (c) 2015 - present Deyaaeldeen Almahallawi
synopsis:            dynamizer produces all valid less precisely-typed versions of a valid program in Grift.
-- description:         
homepage:            https://github.com/Gradual-Typing/Dynamizer
license:             GPL-3
license-file:        LICENSE
author:              Deyaaeldeen Almahallawi
maintainer:          Deyaaeldeen Almahallawi <diaa6510@gmail.com>
Bug-reports:         https://github.com/Gradual-Typing/Dynamizer/issues
-- copyright:           
category:            Language
Stability:           experimental   
build-type:          Simple
extra-source-files:  README.md, LICENSE
cabal-version:       >=2.0.1.1
Source-repository head
   type: git
   location: git://github.com/Gradual-Typing/Dynamizer.git

library
  exposed-modules:     Dynamizer.Lattice
                     , Dynamizer.Sampling
  build-depends:       base
                     , bifunctors
                     , containers
                     , csp
                     , dlist
                     , intervals
                     , language-grift
                     , lattices
                     , mwc-random
                     , parsec
                     , pretty
                     , random
                     , random-extras
                     , random-fu
                     , random-shuffle
                     , rvar
                     , tf-random
                     , transformers
  default-language:    Haskell2010
  ghc-options:
    -Wall -O2

executable dynamizer
  main-is:             Main.hs
  other-modules:       CmdOptions
  build-depends:       base
                     , containers
                     , directory
                     , dlist
                     , dynamizer
                     , filepath
                     , language-grift
                     , optparse-applicative
  hs-source-dirs:      Dynamizer
  default-language:    Haskell2010
  ghc-options:
    -Wall -O2 -threaded

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  other-modules:       Test.Lattice
                     , Test.Sampling
  build-depends:       base
                     , dynamizer
                     , generic-random
                     , intervals
                     , language-grift
                     , mwc-random
                     , QuickCheck
                     , random
                     , random-fu
                     , tf-random
                     , transformers
  default-language:    Haskell2010
  ghc-options:
    -Wall -O2 -threaded